[gd_scene load_steps=46 format=3 uid="uid://cq264t28wmrws"]

[ext_resource type="Texture2D" uid="uid://jghiqfd3w2xg" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/idle_sword.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cbs60c6bqyi2y" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dubr1jly3hxam" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/12-Fall Sword/Fall Sword 01.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://m1a4dt2o6h0y" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/dead/dead.png" id="2_ur7pv"]
[ext_resource type="Texture2D" uid="uid://cgijer8j4ihny" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/jump_sword.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://voimpuin5nh3" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/17-Attack 3/heavy_attack_fx.png" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://jn8ni53tfbvd" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/run_sword.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://coocx35xu3db6" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/17-Attack 3/Attack 3 01.png" id="3_smehm"]
[ext_resource type="Texture2D" uid="uid://cksobsgo425ns" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/attack2.png" id="6_smehm"]
[ext_resource type="Texture2D" uid="uid://5jj0ubhexyf4" path="res://assets/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/hit.png" id="6_y4r1p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_ur7pv")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_ur7pv")
region = Rect2(66, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_ur7pv")
region = Rect2(132, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_ur7pv")
region = Rect2(198, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("2_ur7pv")
region = Rect2(264, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("2_ur7pv")
region = Rect2(330, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("2_ur7pv")
region = Rect2(396, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_ur7pv")
region = Rect2(462, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_fjrip")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_fjrip")
region = Rect2(198, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_fjrip")
region = Rect2(264, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("6_y4r1p")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("6_y4r1p")
region = Rect2(66, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("6_y4r1p")
region = Rect2(132, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("6_y4r1p")
region = Rect2(198, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(66, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(132, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(198, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(264, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_dqkch")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_dqkch")
region = Rect2(66, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_dqkch")
region = Rect2(132, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("6_smehm")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("6_smehm")
region = Rect2(66, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("6_smehm")
region = Rect2(132, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(66, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(132, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(198, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(264, 0, 66, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qhqgy")
region = Rect2(330, 0, 66, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8vuu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}],
"loop": true,
"name": &"heavy_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"light_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(16, 18)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u8vuu")
animation = &"light_attack"
frame = 2
frame_progress = 0.3195

[node name="heavy_attack_ray" type="RayCast2D" parent="AnimatedSprite2D"]
enabled = false
target_position = Vector2(34, 0)
collide_with_areas = true

[node name="light_attack_ray" type="RayCast2D" parent="AnimatedSprite2D"]
enabled = false
target_position = Vector2(29, 0)
collide_with_areas = true

[node name="bottom_collision_ray" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, -2)
scale = Vector2(3, 3)
target_position = Vector2(0, 5)
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_fjrip")
